k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blogify-ingress
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:835175800383:certificate/2af6a7d2-6baf-4c5c-aa73-2e8c166e35b7
    external-dns.alpha.kubernetes.io/hostname: blogify.click
spec:
  ingressClassName: alb
  rules:
    - host: blogify.click
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /socket.io
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 4000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 4000
